tercera mejora en mi website

--- a/card-4-html5.html
+++ b/card-4-html5.html
@@ -68,7 +68,7 @@
                     En esta sección hablaremos de los <b class="font-bold">tags</b> que son más necesarios y útiles al momento de hacer nuestra <b class="font-bold">website</b>.
                 </span>
 
-                <p class="./paragraph paragraph--section-bigDevice">
+                <p class="paragraph paragraph--section-bigDevice">
                     Empezemos por la etiqueta <b class="font-bold">header</b> en donde colocamos nuestra parte principal de nuestra website por ejemplo el nombre ys logo entre otros
                 </p>
 
