--- a/index.html
+++ b/index.html
@@ -73,6 +73,35 @@
                 <!-- BLOCK ARTICLE REVIEW -->
 
                 <div class="article-card">
+                    <img src="./img/variables_css_03_10_2020.png" alt="usando variables css" class="article-card__img">
+
+                    <div class="info-card">
+                        <h1 class="info-card__title">Usando Las Variables en CSS (Cascading Style Sheets)</h1>
+                        <p class="info-card__desc">
+                            CSS tiene nuevas mejoras!, tiene el poder de usar propiedades personalizadas.
+                            Hablamos de variables, las cuales nos permitirán desarrollar mejor y reutilizar nuestro código.
+                        </p>
+                    </div>
+
+                    <div class="info-autor">
+                        <img src="./img/myPhotoFacebook.jpg" alt="hairton Mayhuay" class="info-autor__img">
+
+                        <div class="autor-date">
+                            <h3 class="autor-date__title">Hairton Mayhuay</h3>
+                            <span class="autor-date__full-date">
+                                03 Oct 2020
+                            </span>
+                        </div>
+
+                        <a href="blog.html#variables_css_03_10_2020" class="info-autor__link">
+                            <img src="./img/icon_right_icon_article_review.png" alt="icon article" class="info-autor__icon">
+                        </a>
+                    </div>
+                </div>
+
+                <!-- BLOCK ARTICLE REVIEW -->
+
+                <div class="article-card">
                     <img src="./img/article_view_img_01.png" alt="main icon card" class="article-card__img">
 
                     <div class="info-card">
@@ -83,7 +112,7 @@
                     </div>
 
                     <div class="info-autor">
-                        <img src="./img/myPhotoFacebook.jpg" alt="icon my photo" class="info-autor__img">
+                        <img src="./img/myPhotoFacebook.jpg" alt="hairton Mayhuay" class="info-autor__img">
 
                         <div class="autor-date">
                             <h3 class="autor-date__title">Hairton Mayhuay</h3>
@@ -93,7 +122,7 @@
                         </div>
 
                         <a href="blog.html#myOpinionHTML-info-blog" class="info-autor__link">
-                            <img src="./img/icon_right_icon_article_review.png" alt="icon article icon" class="info-autor__icon">
+                            <img src="./img/icon_right_icon_article_review.png" alt="icon article" class="info-autor__icon">
                         </a>
                     </div>
                 </div>
